[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Level_0/Scripts/Enemies/RobotZombie.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/RobotZombie/BodyRZombie.png" type="Texture" id=2]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/RobotZombie/RightHandRZombie.png" type="Texture" id=3]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/RobotZombie/LeftLegRZombie.png" type="Texture" id=4]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/RobotZombie/RightLegRZombie.png" type="Texture" id=5]
[ext_resource path="res://Levels/Level_0/Assets/Enemies/RobotZombie/LeftHandRZombie.png" type="Texture" id=6]
[ext_resource path="res://Levels/Level_0/Assets/ComicEffects/1ComicEffects1.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Standing"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteKeeper/Body/LeftLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.466021, 0.466021 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteKeeper/Body/RightLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.56493, 1.56493 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteKeeper/Body/LeftHand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.85403, 36.2689 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteKeeper/Body/RightHand:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 42.0054, 0.109638 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walking"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteKeeper/Body/LeftLeg:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -44.8246 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteKeeper/Body/RightLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -44.9428, -0.630406 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteKeeper/Body/LeftHand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.38296, 89.1023 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteKeeper/Body/RightHand:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 81.4934, -15.7911 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "HitRedFlash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.862745, 0.341176, 0.341176, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Bam"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.101, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("KinematicBody2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "destroy_animation_mid"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="RobotZombie" type="Node2D"]
position = Vector2( 640, 350 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
editor/display_folded = true
collision_layer = 4
collision_mask = 16
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D"]
polygon = PoolVector2Array( 64.3519, -33.5028, 64.912, 2.40152, 54.0408, 16.1995, 33.5529, 16.1995, 32.2985, 49.6492, 13.9011, 55.5029, 14.7374, 73.9003, 15.1555, 127.838, -36.9215, 127.838, -37.9459, 71.8097, -37.9459, 55.5029, -63.0332, 53.4123, -69.3051, 43.7955, -69.3051, -18.5045, -61.6982, -35.4931 )
one_way_collision = true

[node name="SpriteKeeper" type="Node2D" parent="KinematicBody2D"]
rotation = -0.00741665

[node name="Body" type="Sprite" parent="KinematicBody2D/SpriteKeeper"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="RightHand" type="Sprite" parent="KinematicBody2D/SpriteKeeper/Body"]
position = Vector2( 53.5282, -31.3528 )
rotation = 0.733133
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( 48.2981, 73.2976 )

[node name="LeftLeg" type="Sprite" parent="KinematicBody2D/SpriteKeeper/Body"]
position = Vector2( -95.5609, 106.562 )
rotation = 0.00813361
texture = ExtResource( 4 )
offset = Vector2( 8.92078, 54.0836 )

[node name="RightLeg" type="Sprite" parent="KinematicBody2D/SpriteKeeper/Body"]
position = Vector2( 21.4814, 104.508 )
rotation = 0.0273131
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( 4.50464, 59.5754 )

[node name="LeftHand" type="Sprite" parent="KinematicBody2D/SpriteKeeper/Body"]
position = Vector2( -77.1936, -20.2067 )
rotation = 0.0323589
texture = ExtResource( 6 )
offset = Vector2( 57.0256, 66.8452 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="KinematicBody2D"]

[node name="Area2D" type="Area2D" parent="KinematicBody2D"]
collision_layer = 4
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D/Area2D"]
visible = false
polygon = PoolVector2Array( -31.1808, -53.4055, 7.96106, -55.3958, 15.2587, -48.0981, 46.4396, -55.3958, 65.0154, -40.8004, 65.0154, -0.331696, 58.3812, 14.2636, 33.1711, 14.2636, 33.1711, 55.3958, 16.5856, 71.3179, 15.2587, 126.382, -35.1614, 127.045, -34.4979, 66.6739, -67.6691, 48.7615, -69.6593, -8.29279, -59.7079, -38.8102 )

[node name="WalkTimer" type="Timer" parent="KinematicBody2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
autoplay = "Walking"
anims/Standing = SubResource( 1 )
anims/Walking = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="KinematicBody2D"]
position = Vector2( 6.63428, 31.1808 )
rotation = -1.64174
cast_to = Vector2( 0, 70 )
collision_mask = 5

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D"]
anims/Default = SubResource( 4 )
anims/HitRedFlash = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8.55005, 36.1001 )
scale = Vector2( 1e-005, 1e-005 )
texture = ExtResource( 7 )

[node name="ComicAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bam = SubResource( 5 )
[connection signal="screen_entered" from="KinematicBody2D/VisibilityNotifier2D" to="KinematicBody2D" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="area_entered" from="KinematicBody2D/Area2D" to="KinematicBody2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="KinematicBody2D/WalkTimer" to="KinematicBody2D" method="_on_WalkTimer_timeout"]
